[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/dogica.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/DogicaMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Autoloads/Pause Menu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Autoloads/Pause Menu/MenuOptions.gd" type="Script" id=4]
[ext_resource path="res://Effects/SFx/Pause.wav" type="AudioStream" id=5]
[ext_resource path="res://Effects/SFx/Unpause.wav" type="AudioStream" id=6]
[ext_resource path="res://Effects/SFx/Menu Select.wav" type="AudioStream" id=7]
[ext_resource path="res://Fonts/DogicaButtons.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0, 240.0, -29.0, 103.0, 117.0, 131.0, 145.0, 159.0, 173.0, 187.0, 201.0, 215.0, 229.0 ],
"_edit_vertical_guides_": [ 0.0, 426.0, 213.0 ]
}

[node name="MenuOptions" type="Control" parent="."]
margin_right = 426.0
margin_bottom = 240.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="MenuOptions"]
modulate = Color( 0, 0, 0, 0.627451 )
margin_right = 426.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MenuOptions"]

[node name="MainMenu" type="Control" parent="MenuOptions"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Menu" type="Label" parent="MenuOptions/MainMenu"]
margin_left = 98.0
margin_top = 24.0
margin_right = 213.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "PAUSE MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continuar" type="Button" parent="MenuOptions/MainMenu"]
modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 159.0
margin_top = 117.0
margin_right = 315.0
margin_bottom = 137.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcoes" type="Button" parent="MenuOptions/MainMenu"]
modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 159.0
margin_top = 145.0
margin_right = 315.0
margin_bottom = 165.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Opções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controles" type="Button" parent="MenuOptions/MainMenu"]
modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 159.0
margin_top = 173.0
margin_right = 315.0
margin_bottom = 193.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Controles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="MenuOptions/MainMenu"]
modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 159.0
margin_top = 201.0
margin_right = 315.0
margin_bottom = 221.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="CheckButton" parent="MenuOptions/MainMenu"]
margin_left = 330.0
margin_right = 570.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.4 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 8 )
text = "Fullscreen"

[node name="OptionsMenu" type="Control" parent="MenuOptions"]
margin_left = 426.0
margin_right = 852.0
margin_bottom = 240.0

[node name="Teste" type="Label" parent="MenuOptions/OptionsMenu"]
margin_left = 183.0
margin_top = 40.0
margin_right = 285.0
margin_bottom = 54.0
text = "OPTIONS MENU"

[node name="Voltar" type="Button" parent="MenuOptions/OptionsMenu"]
modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 183.0
margin_top = 201.0
margin_right = 339.0
margin_bottom = 221.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="AudioStreamPlayer" parent="MenuOptions"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Pause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Unpause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="pressed" from="MenuOptions/MainMenu/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="MenuOptions/MainMenu/Opcoes" to="MenuOptions" method="_on_Opcoes_pressed"]
[connection signal="pressed" from="MenuOptions/MainMenu/Sair" to="MenuOptions" method="_on_Sair_pressed"]
[connection signal="pressed" from="MenuOptions/MainMenu/FullScreen" to="MenuOptions" method="_on_FullScreen_pressed"]
[connection signal="pressed" from="MenuOptions/OptionsMenu/Voltar" to="MenuOptions" method="_on_Voltar_pressed"]
